--- a/app/views/trainer_plugin/reports/main.html.erb
+++ b/app/views/trainer_plugin/reports/main.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_tag "", remote: true, id: "report_form" do %>
   <div class="form-group">
     <%= label_tag "", "Choose report type" %>
@@ -11,3 +12,4 @@
     <%= select_tag :user_id, options_from_collection_for_select(@users, :id, :email), class: "form-control" %>
   </div>
 <% end %>
+</div>
